--- a/main.css
+++ b/main.css
@@ -17,7 +17,9 @@ p, li {
 	color: grey; 
 }
 
-
+.hide {
+    display: none;
+}
 
 
 .menu {
@@ -118,13 +120,7 @@ header {
 	background: -moz-linear-gradient(top , #90E2FB, #90E2FB, #00bdf5);
 	background: linear-gradient(top , #90E2FB, #90E2FB, #00bdf5);
     position: relative;
-    z-index: -3;
     overflow: hidden;
-}
-
-
-.fp-slides {
-    z-index: -2;
 }
 
 /*slider role erdf 5*/
@@ -133,13 +129,11 @@ header {
     width: 100%;
     background: white;
     position: relative;
-    z-index: -3;
     overflow: hidden;
 }
 
 .article_erdf {
 	position: absolute;
-    z-index: 1;
     margin: 15%;
     height: 80%;
     max-height: 500px;
