--- a/modal.css
+++ b/modal.css
@@ -11,21 +11,6 @@
 	transform: translateX(-50%) translateY(-50%);
 }
 
-.md-content:after {
-	content: '';
-	display: block;  
-	position: absolute;
-	left: 50%;
-	top: 100%;
-	width: 0;
-	height: 0;
-	border-bottom: 40px solid transparent;
-	border-top: 40px solid #005EB8;
-	border-left: 40px solid transparent;
-	border-right: 40px solid transparent;
-	margin-left: -40px;
-}
-
 .md-show {
 	visibility: visible;
 }
@@ -59,9 +44,39 @@
 	margin: 0 auto;
 }
 
+.md-content:after {
+	content: '';
+	display: block;  
+	position: absolute;
+	left: 50%;
+	top: 100%;
+	width: 0;
+	height: 0;
+	border-bottom: 40px solid transparent;
+	border-top: 40px solid #005EB8;
+	border-left: 40px solid transparent;
+	border-right: 40px solid transparent;
+	margin-left: -40px;
+}
+
 /* Vert */
-md-green {
-	border: 10px solid #48A23F;
+.md-green {
+	border: 10px solid #CCE821;
+}
+
+.md-green:after {
+	content: '';
+	display: block;  
+	position: absolute;
+	left: 50%;
+	top: 100%;
+	width: 0;
+	height: 0;
+	border-bottom: 40px solid transparent;
+	border-top: 40px solid #CCE821;
+	border-left: 40px solid transparent;
+	border-right: 40px solid transparent;
+	margin-left: -40px;
 }
 
 .md-content h3 {
