--- a/sol.css
+++ b/sol.css
@@ -21,7 +21,7 @@
     color: white; 
     text-align: center; 
     text-indent: .1em;
-    z-index: 3;
+    z-index: 2;
     bottom: 0;
     overflow: hidden;
     display: none;
@@ -36,7 +36,7 @@
     left: -5%; 
     background: inherit; 
     border-radius: 5% / 50%;
-    z-index: 3;
+    z-index: 2;
 } 
 
 /* ---- HEOLIENNE ---- */
@@ -51,12 +51,12 @@
 
 .heoliene-2, .mat-2, .rotor-2 {
     left: 10%;
-    z-index: -2;
+    z-index: 4;
     bottom: 24.5%;
 }
 
 .rotor-2 {
-    z-index: -3 !important;
+    z-index: 5 !important;
 }
 
 .mat {
@@ -89,7 +89,7 @@
 
     left: 25px; bottom: 100px;
     position: absolute;
-    z-index: -1;
+    z-index: 5;
 
     transform-origin: center left;
 }
